ToDo: create a scheduler for the groovy file loading